[package]
name = "algorithms-edu"
version = "0.1.1"
authors = ["Tianyi <ShiTianyi2001@outlook.com>"]
edition = "2018"
description = "Algorithms for pedagogical demonstration"
license = "MIT"
repository = "https://github.com/TianyiShi2001/Algorithms"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2.14"
partial-min-max = "0.4.0"
priority-queue = "1.0"
ordered-float = "2.0"