[package]
name = "algorithms-edu"
version = "0.2.7"
authors = ["Tianyi <ShiTianyi2001@outlook.com>"]
edition = "2018"
description = "Algorithms for pedagogical demonstration"
license = "MIT"
repository = "https://github.com/TianyiShi2001/Algorithms"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2.14"
partial-min-max = "0.4.0"
priority-queue = "1.0"
ordered-float = "2.0"
disjoint-sets = "0.4.2"
rand = "0.8.0"
lazy_static = "1.4.0"
kodama = "0.2.3"
min-max = "0.1.8"
num-derive = "0.3.3"
statrs = "0.13.0"
nalgebra = "0.24.0"
num = "0.3.1"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
maplit = "1.0.2"

[dev-dependencies]
regex = "1.4.3"
counter = "0.5.2"


[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "katex-header.html" ]
